<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Titles -->
    <string name="app_name">TP1 Android Client</string>
    <string name="main_activity_title">TP1: Home</string>
    <string name="connexion_activity_title">TP1: Sign in</string>
    <string name="inscription_activity_title">TP1: Sign up</string>
    <string name="task_consultation_activity_title">TP1: Task Consultation</string>
    <string name="task_creation_activity_title">TP1: Add Task</string>

    <!-- Others -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Sign up</string>
    <string name="signin">Sign in</string>
    <string name="home">Home</string>
    <string name="add_task">Add Task</string>
    <string name="logout">Logout</string>
    <string name="create_task">Create a task</string>
    <string name="task_name">Task Name</string>
    <string name="deadline_date">Deadline Date</string>
    <string name="deadline_date_hint">Deadline Date (yyyy/MM/dd)</string>
    <string name="task_completion_percentage">Task Completion Percentage</string>
    <string name="time_elapsed_percentage">Percentage of time elapsed between creation date and deadline</string>
    <string name="time_elapsed_since_creation">Time elapsed since task creation</string>
    <string name="edit_completion_percentage">Edit Completion Percentage</string>
    <string name="drawer_open">Close me</string>
    <string name="drawer_close">Open me</string>S
    <string name="save">Save</string>
    <string name="submit">Submit</string>
    <string name="confirm_password_error">Password and confirm password fields don\'t match</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="valid_credentials">Welcome</string>
    <string name="task_added">Task added!</string>
    <string name="task_modified">Task modified!</string>
    <string name="username_too_short">Username must be at least 2 characters long</string>
    <string name="password_too_short">Password must be at least 4 characters long</string>
    <string name="username_already_taken">Username is already taken</string>
    <string name="task_name_exist">This task name already exists</string>
    <string name="task_name_empty">Task name cannot be empty</string>
    <string name="task_name_too_short">Task name must be at least 2 characters long</string>
    <string name="error_dialog_title">Error</string>
    <string name="error_network">A network error occurred. Please try again later.</string>
</resources>