<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home_icon"
        android:title="@string/home"
        android:contentDescription="content_description_favorite"
        app:showAsAction="never" />

    <item
        android:id="@+id/nav_add_task"
        android:icon="@drawable/add_box_icon"
        android:title="@string/add_task"
        android:contentDescription="content_description_search"
        app:showAsAction="never" />

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/logout_icon"
        android:title="@string/logout"
        android:contentDescription="content_description_more"
        app:showAsAction="never" />

</menu>